Started working on jvm security policies